Bonus_Exercises/Prometheus_and_Grafana/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "grafana.local"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grafana
            port:
              number: 80
  - host: "prometheus.local"
    http:
      paths:
      - pathType: Prefix
        path:  /
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
